--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,11 @@ table {
 
 /* MAIN STYLING CODE */
 
+body {
+	background-color: #96e0f9;
+	font-family: 'Roboto', sans-serif;
+}
+
 .main {
 	text-align: center;
 	padding-top: 40px;
@@ -72,6 +77,7 @@ h1 {
 	padding: 10px;
 	border: 1px solid black;
 	margin: auto;
+	background-color: #d4f4ff;
 }
 
 label {
@@ -87,7 +93,7 @@ button {
 	height: 40px;
 	border-radius: 10px;
 	border: none;
-	background-color: rgb(87, 90, 243);
+	background-color: #1D71F2;
 	color: white;
 	font-size: 1.2em;
 }
