--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,26 @@ body {
 	margin: auto;
 }
 
+nav {
+	background-color: #1D71F2;
+	height: 70px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding-left: 10px;
+	color: white;
+}
+
+nav > p {
+	font-size: 1.4em;
+	font-weight: bold;
+}
+
+.thermometer-img {
+	width: 50px;
+	height: 50px;
+}
+
 h1 {
 	font-size: 2.3em;
 }
@@ -96,6 +116,10 @@ button {
 	background-color: #1D71F2;
 	color: white;
 	font-size: 1.2em;
+}
+
+.hidden {
+	visibility: hidden;
 }
 
 /* Mobile Design */
@@ -178,4 +202,86 @@ button {
 	input {
 		margin-top: 10px;
 	}
+}
+
+/* Spinner Animation */
+.lds-spinner {
+  color: official;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+	position: fixed;
+}
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 37px;
+  width: 6px;
+  height: 18px;
+  border-radius: 20%;
+  background: #fff;
+	background-color: black;
+}
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
